force-app/main/default/objects/Inventory_Snapshot__c/Inventory_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Inventory Snapshot</label>
    <nameField>
        <displayFormat>I{0000}-{MM}/{YYYY}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>