force-app/main/default/objects/Inventory_Snapshot__c/fields/Available_Month_End__c.field-meta.xml
<CustomField>
    <fullName>Available_Month_End__c</fullName>
    <label>Available Month End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>