force-app/main/default/objects/Inventory_Snapshot__c/fields/Available_Month_Start__c.field-meta.xml
<CustomField>
    <fullName>Available_Month_Start__c</fullName>
    <inlineHelpText>At Month Start or at time created</inlineHelpText>
    <label>Available Month Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>