force-app/main/default/objects/Inventory_Snapshot__c/fields/Owed_Month_End__c.field-meta.xml
<CustomField>
    <fullName>Owed_Month_End__c</fullName>
    <label>Owed Month End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>