force-app/main/default/objects/Inventory_Snapshot__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Snapshots</relationshipLabel>
    <relationshipName>Inventory_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>