force-app/main/default/objects/Inventory_Snapshot__c/fields/Snapshot_End__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_End__c</fullName>
    <defaultValue>IF( MONTH( TODAY() ) = 12, 
DATE( YEAR( TODAY() ), 12, 31 ), 
DATE( YEAR( TODAY() ), MONTH( TODAY() ) + 1, 1) - 1)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Snapshot End</label>
    <type>Date</type>
</CustomField>