force-app/main/default/objects/Inventory_Snapshot__c/fields/Snapshot_Start__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Start__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Snapshot Start</label>
    <type>Date</type>
</CustomField>